View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0032319 | Open CASCADE | OCCT:Foundation Classes | public | 2021-04-22 20:41 | 2021-05-01 13:32 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | trivial | ||
Status | closed | Resolution | fixed | ||
Platform | Linux | OS | Ubuntu | ||
Product Version | 7.5.0 | ||||
Target Version | 7.6.0 | Fixed in Version | 7.6.0 | ||
Summary | 0032319: Foundation Classes, OSD_MemInfo - use mallinfo2() instead of deprecated mallinfo() | ||||
Description | mallinfo2() has been introduced by glibc2.33 to handle 32-bit integer overflow. At the same time mallinfo() has been marked deprecated (in glibc), which leads to compiler warning in OCCT. | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | Not required | ||||
|
Branch CR32319 has been created by kgv. SHA-1: c3494d4e30259a94af1ec57e789b05f9180ffd1d Detailed log of new commits: Author: kgv Date: Thu Apr 22 20:42:47 2021 +0300 0032319: Foundation Classes, OSD_MemInfo - use mallinfo2() instead of deprecated mallinfo() |
|
Patch is ready for review - OCCT: branch CR32319. http://jenkins-test-12.nnov.opencascade.com/view/CR32319-master-KGV/ |
|
The patch was reviewed |
|
Problems with compilation for Android /dn61/builds/WEEK-16_WEEK-16/OCCT_SRC/src/OSD/OSD_MemInfo.cxx:185:57: error: function-like macro '__GLIBC_PREREQ' is not defined #if defined(__GLIBC__) && (defined(__GLIBC_PREREQ) && __GLIBC_PREREQ(2,33)) |
|
Branch CR32319_1 has been created by kgv. SHA-1: 39dc2248ad3bd214426a9428d24463eab16ed0ca Detailed log of new commits: Author: kgv Date: Thu Apr 22 20:42:47 2021 +0300 0032319: Foundation Classes, OSD_MemInfo - use mallinfo2() instead of deprecated mallinfo() |
|
Please use updated patch in branch CR32319_1. |
|
Combination - OCCT branch : master Products branch : master was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 17839.600000000362 / 17844.450000000477 [-0.03%] Products Total CPU difference: 11562.480000000109 / 11558.800000000136 [+0.03%] Windows-64-VC14: OCCT Total CPU difference: 19303.28125 / 19431.828125 [-0.66%] Products Total CPU difference: 12894.515625 / 12871.203125 [+0.18%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR32319_1 has been deleted by inv. SHA-1: 39dc2248ad3bd214426a9428d24463eab16ed0ca |
|
Branch CR32319 has been deleted by inv. SHA-1: c3494d4e30259a94af1ec57e789b05f9180ffd1d |
Date Modified | Username | Field | Change |
---|---|---|---|
2021-04-22 20:41 | kgv | New Issue | |
2021-04-22 20:41 | kgv | Assigned To | => abv |
2021-04-22 20:41 | kgv | Relationship added | child of 0032006 |
2021-04-22 20:44 | git | Note Added: 0100515 | |
2021-04-22 22:12 | kgv | Note Added: 0100518 | |
2021-04-22 22:12 | kgv | Assigned To | abv => osa |
2021-04-22 22:12 | kgv | Status | new => resolved |
2021-04-22 22:12 | kgv | OS | => Ubuntu |
2021-04-22 22:12 | kgv | OS Version | => 21.04 |
2021-04-22 22:12 | kgv | Platform | => Linux |
2021-04-23 09:15 | osa | Note Added: 0100521 | |
2021-04-23 09:15 | osa | Assigned To | osa => bugmaster |
2021-04-23 09:15 | osa | Status | resolved => reviewed |
2021-04-23 09:28 | kgv | Severity | minor => trivial |
2021-04-23 09:28 | kgv | Description Updated | |
2021-04-24 14:54 | bugmaster | Note Added: 0100539 | |
2021-04-24 14:54 | bugmaster | Assigned To | bugmaster => kgv |
2021-04-24 14:54 | bugmaster | Status | reviewed => assigned |
2021-04-24 15:26 | git | Note Added: 0100540 | |
2021-04-24 15:43 | kgv | Note Added: 0100541 | |
2021-04-24 15:43 | kgv | Assigned To | kgv => bugmaster |
2021-04-24 15:43 | kgv | Status | assigned => resolved |
2021-04-24 15:43 | kgv | Status | resolved => reviewed |
2021-04-25 11:00 | bugmaster | Status | reviewed => tested |
2021-04-25 11:15 | bugmaster | Status | tested => assigned |
2021-04-25 11:16 | bugmaster | Assigned To | bugmaster => abv |
2021-04-25 11:16 | bugmaster | Status | assigned => resolved |
2021-04-25 11:16 | bugmaster | Assigned To | abv => bugmaster |
2021-04-25 11:16 | bugmaster | Status | resolved => reviewed |
2021-05-01 12:27 | bugmaster | Note Added: 0100713 | |
2021-05-01 12:27 | bugmaster | Status | reviewed => tested |
2021-05-01 12:33 | bugmaster | Test case number | => Not required |
2021-05-01 12:44 | bugmaster | Changeset attached | => occt master 376d374d |
2021-05-01 12:44 | bugmaster | Status | tested => verified |
2021-05-01 12:44 | bugmaster | Resolution | open => fixed |
2021-05-01 13:32 | git | Note Added: 0100742 | |
2021-05-01 13:32 | git | Note Added: 0100744 |