0032319: Foundation Classes, OSD_MemInfo - use mallinfo2() instead of deprecated mallinfo()